[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Matthew McCune <matthew@matthew.cx>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.9.0"
lazy_static = "1.4.0"
pest = "2.0"
pest_derive = "2.0"
petgraph = "0.5"
regex = "1"
